--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 <div class="bg-blue-100 rounded-xl h-64 flex items-center justify-center overflow-hidden">
                     <span class="text-gray-400 italic text-sm text-center p-4"</span>
                 </div>
-                <p class="text-center py-2 font-semibold text-pink-500">Momen Manis</p>
+                <p class="https://files.catbox.moe/fwtirv.jpg">Momen Manis</p>
             </div>
             <div class="card-glass p-2 hover-scale">
                 <div class="bg-pink-100 rounded-xl h-64 flex items-center justify-center overflow-hidden">
