--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
             </div>
 
             <div class="flex flex-col sm:flex-row gap-4 justify-center">
-                <button onclick="surprise()" class="btn-bounce bg-yellow-400 hover:bg-yellow-300 text-pink-700 px-8 py-4 rounded-2xl font-black text-lg shadow-xl transition-all"
+                <button onclick="surprise()" class="btn-bounce bg-yellow-400 hover:bg-yellow-300 text-pink-700 px-8 py-4 rounded-2xl font-black text-lg shadow-xl transition-all">
                     BAGIKAN CINTA ✨
                 </button>
-                <button onclick="copyToClipboard()" class="btn-bounce bg-white/20 hover:bg-white/30 text-white px-8 py-4 rounded-2xl font-bold border border-white/50 transition-all"
+                <button onclick="copyToClipboard()" class="btn-bounce bg-white/20 hover:bg-white/30 text-white px-8 py-4 rounded-2xl font-bold border border-white/50 transition-all">
                     SALIN TEKS 📋
                 </button>
             </div>
